// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charts/Funnel Chart Autosize smoke-test 1`] = `
<div style="width: 90vw; height: 90vh; border: 1px solid red;">
  <div class="_container_1u3dt_1"
       style="height: 100%; width: 100%;"
  >
    <svg width="1150"
         height="646"
         class="_svg_1u3dt_30"
         tabindex="0"
    >
      <g transform="translate(0, 0)">
        <g style="transform: translate(0px, 0px);">
          <g pointer-events="auto"
             aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
             role="graphics-document"
          >
            <path d="M0,0C95.833,5.383,191.667,10.767,287.5,32.3C383.333,53.833,479.167,102.283,575,129.2C670.833,156.117,766.667,193.8,862.5,193.8C958.333,193.8,1054.167,193.8,1150,193.8L1150,323C1054.167,323,958.333,323,862.5,323C766.667,323,670.833,323,575,323C479.167,323,383.333,323,287.5,323C191.667,323,95.833,323,0,323Z"
                  fill="url(#gradient-funnel-series-ref-4-arc-0-top)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <path d="M0,646C95.833,640.617,191.667,635.233,287.5,613.7C383.333,592.167,479.167,543.717,575,516.8C670.833,489.883,766.667,452.2,862.5,452.2C958.333,452.2,1054.167,452.2,1150,452.2L1150,323C1054.167,323,958.333,323,862.5,323C766.667,323,670.833,323,575,323C479.167,323,383.333,323,287.5,323C191.667,323,95.833,323,0,323Z"
                  fill="url(#gradient-funnel-series-ref-4-arc-0-bottom)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-4-arc-0-top"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-4-arc-0-bottom"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
          </g>
        </g>
        <g transform="translate(10, 333)"
           opacity="1"
        >
          <text pointer-events="none"
                fill="#fff"
                y="-23"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="26"
          >
            1,000
          </text>
          <text pointer-events="none"
                fill="#fff"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="13"
          >
            <tspan dominant-baseline="alphabetic"
                   dy="2.5"
                   x="0"
                   style="baseline-shift: 0%;"
            >
              Visited Site
            </tspan>
          </text>
        </g>
        <line x1="287.5"
              y1="0"
              x2="287.5"
              y2="646"
              stroke="#333"
              stroke-width="2"
              pointer-events="none"
        >
        </line>
        <g transform="translate(297.5, 333)"
           opacity="1"
        >
          <text pointer-events="none"
                fill="#fff"
                y="-23"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="26"
          >
            900
          </text>
          <text pointer-events="none"
                fill="#fff"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="13"
          >
            <tspan dominant-baseline="alphabetic"
                   dy="2.5"
                   x="0"
                   style="baseline-shift: 0%;"
            >
              Added to Cart
            </tspan>
          </text>
        </g>
        <line x1="575"
              y1="0"
              x2="575"
              y2="646"
              stroke="#333"
              stroke-width="2"
              pointer-events="none"
        >
        </line>
        <g transform="translate(585, 333)"
           opacity="1"
        >
          <text pointer-events="none"
                fill="#fff"
                y="-23"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="26"
          >
            600
          </text>
          <text pointer-events="none"
                fill="#fff"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="13"
          >
            <tspan dominant-baseline="alphabetic"
                   dy="2.5"
                   x="0"
                   style="baseline-shift: 0%;"
            >
              Initiated Checkout
            </tspan>
          </text>
        </g>
        <line x1="862.5"
              y1="0"
              x2="862.5"
              y2="646"
              stroke="#333"
              stroke-width="2"
              pointer-events="none"
        >
        </line>
        <g transform="translate(872.5, 333)"
           opacity="1"
        >
          <text pointer-events="none"
                fill="#fff"
                y="-23"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="26"
          >
            400
          </text>
          <text pointer-events="none"
                fill="#fff"
                dominant-baseline="middle"
                font-family="sans-serif"
                font-size="13"
          >
            <tspan dominant-baseline="alphabetic"
                   dy="2.5"
                   x="0"
                   style="baseline-shift: 0%;"
            >
              Purchased
            </tspan>
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Charts/Funnel Chart Basic smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="300"
     style="height: 300px; width: 500px;"
>
  <svg width="500"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0C41.667,2.5,83.333,5,125,15C166.667,25,208.333,47.5,250,60C291.667,72.5,333.333,90,375,90C416.667,90,458.333,90,500,90L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                fill="url(#gradient-funnel-series-ref-1-arc-0-top)"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,300C41.667,297.5,83.333,295,125,285C166.667,275,208.333,252.5,250,240C291.667,227.5,333.333,210,375,210C416.667,210,458.333,210,500,210L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                fill="url(#gradient-funnel-series-ref-1-arc-0-bottom)"
                stroke="none"
                opacity="1"
          >
          </path>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-1-arc-0-top"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-1-arc-0-bottom"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
        </g>
      </g>
      <g transform="translate(10, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          1,000
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Visited Site
          </tspan>
        </text>
      </g>
      <line x1="125"
            y1="0"
            x2="125"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(135, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          900
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Added to Cart
          </tspan>
        </text>
      </g>
      <line x1="250"
            y1="0"
            x2="250"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(260, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          600
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Initiated Checkout
          </tspan>
        </text>
      </g>
      <line x1="375"
            y1="0"
            x2="375"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(385, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          400
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Purchased
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Funnel Chart Interpolation smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="300"
     style="height: 300px; width: 500px;"
>
  <svg width="500"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0L62.5,0L62.5,15L187.5,15L187.5,60L312.5,60L312.5,90L437.5,90L437.5,90L500,90L500,150L437.5,150L437.5,150L312.5,150L312.5,150L187.5,150L187.5,150L62.5,150L62.5,150L0,150Z"
                fill="url(#gradient-funnel-series-ref-3-arc-0-top)"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,300L62.5,300L62.5,285L187.5,285L187.5,240L312.5,240L312.5,210L437.5,210L437.5,210L500,210L500,150L437.5,150L437.5,150L312.5,150L312.5,150L187.5,150L187.5,150L62.5,150L62.5,150L0,150Z"
                fill="url(#gradient-funnel-series-ref-3-arc-0-bottom)"
                stroke="none"
                opacity="1"
          >
          </path>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-3-arc-0-top"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-3-arc-0-bottom"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
        </g>
      </g>
      <g transform="translate(10, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          1,000
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Visited Site
          </tspan>
        </text>
      </g>
      <line x1="125"
            y1="0"
            x2="125"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(135, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          900
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Added to Cart
          </tspan>
        </text>
      </g>
      <line x1="250"
            y1="0"
            x2="250"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(260, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          600
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Initiated Checkout
          </tspan>
        </text>
      </g>
      <line x1="375"
            y1="0"
            x2="375"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(385, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          400
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Purchased
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Funnel Chart LabelPosition smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="300"
     style="height: 300px; width: 500px;"
>
  <svg width="500"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0C41.667,2.5,83.333,5,125,15C166.667,25,208.333,47.5,250,60C291.667,72.5,333.333,90,375,90C416.667,90,458.333,90,500,90L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                fill="url(#gradient-funnel-series-ref-6-arc-0-top)"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,300C41.667,297.5,83.333,295,125,285C166.667,275,208.333,252.5,250,240C291.667,227.5,333.333,210,375,210C416.667,210,458.333,210,500,210L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                fill="url(#gradient-funnel-series-ref-6-arc-0-bottom)"
                stroke="none"
                opacity="1"
          >
          </path>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-6-arc-0-top"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
          <linearGradient spreadmethod="pad"
                          id="gradient-funnel-series-ref-6-arc-0-bottom"
                          y1="0%"
                          y2="0%"
                          x1="0%"
                          x2="100%"
          >
            <stop offset="0%"
                  stop-opacity="1"
                  stop-color="#2d60e8"
            >
            </stop>
            <stop offset="80%"
                  stop-opacity="0.5"
                  stop-color="#2d60e8"
            >
            </stop>
          </linearGradient>
        </g>
      </g>
      <g transform="translate(10, 290)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          1,000
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Visited Site
          </tspan>
        </text>
      </g>
      <line x1="125"
            y1="0"
            x2="125"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(135, 290)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          900
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Added to Cart
          </tspan>
        </text>
      </g>
      <line x1="250"
            y1="0"
            x2="250"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(260, 290)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          600
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Initiated Checkout
          </tspan>
        </text>
      </g>
      <line x1="375"
            y1="0"
            x2="375"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(385, 290)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          400
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Purchased
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Funnel Chart LargeDataset smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="300"
     style="height: 300px; width: 500px;"
>
  <svg width="500"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g>
          <rect height="300"
                width="500"
                opacity="0"
                cursor="auto"
          >
          </rect>
          <g pointer-events="none"
             aria-label="Visited Site: 15,000, Added to Cart: 12,000, Initiated Checkout: 11,000, Purchased: 6,000, Subscribed: 5,000, Became a Member: 3,000, Upgraded to Premium: 1,000, Became a VIP: 900"
             role="graphics-document"
          >
            <path d="M0,37.5C20.833,46.25,41.667,55,62.5,60C83.333,65,104.167,62.5,125,67.5C145.833,72.5,166.667,100,187.5,105C208.333,110,229.167,108.75,250,112.5C270.833,116.25,291.667,122.5,312.5,127.5C333.333,132.5,354.167,142,375,142.5C395.833,143,416.667,143.25,437.5,143.25C458.333,143.25,479.167,143.25,500,143.25L500,150C479.167,150,458.333,150,437.5,150C416.667,150,395.833,150,375,150C354.167,150,333.333,150,312.5,150C291.667,150,270.833,150,250,150C229.167,150,208.333,150,187.5,150C166.667,150,145.833,150,125,150C104.167,150,83.333,150,62.5,150C41.667,150,20.833,150,0,150Z"
                  fill="url(#gradient-funnel-series-ref-2-arc-0-top)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <path d="M0,262.5C20.833,253.75,41.667,245,62.5,240C83.333,235,104.167,237.5,125,232.5C145.833,227.5,166.667,200,187.5,195C208.333,190,229.167,191.25,250,187.5C270.833,183.75,291.667,177.5,312.5,172.5C333.333,167.5,354.167,158,375,157.5C395.833,157,416.667,156.75,437.5,156.75C458.333,156.75,479.167,156.75,500,156.75L500,150C479.167,150,458.333,150,437.5,150C416.667,150,395.833,150,375,150C354.167,150,333.333,150,312.5,150C291.667,150,270.833,150,250,150C229.167,150,208.333,150,187.5,150C166.667,150,145.833,150,125,150C104.167,150,83.333,150,62.5,150C41.667,150,20.833,150,0,150Z"
                  fill="url(#gradient-funnel-series-ref-2-arc-0-bottom)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-2-arc-0-top"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-2-arc-0-bottom"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
          </g>
        </g>
      </g>
      <line x1="62.5"
            y1="0"
            x2="62.5"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="125"
            y1="0"
            x2="125"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="187.5"
            y1="0"
            x2="187.5"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="250"
            y1="0"
            x2="250"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="312.5"
            y1="0"
            x2="312.5"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="375"
            y1="0"
            x2="375"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <line x1="437.5"
            y1="0"
            x2="437.5"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
    </g>
  </svg>
</div>
`;

exports[`Charts/Funnel Chart Layered smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="800"
     height="400"
     style="height: 400px; width: 800px;"
>
  <svg width="800"
       height="400"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0C66.667,3.333,133.333,6.667,200,20C266.667,33.333,333.333,63.333,400,80C466.667,96.667,533.333,120,600,120C666.667,120,733.333,120,800,120L800,200C733.333,200,666.667,200,600,200C533.333,200,466.667,200,400,200C333.333,200,266.667,200,200,200C133.333,200,66.667,200,0,200Z"
                fill="#013027"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,400C66.667,396.667,133.333,393.333,200,380C266.667,366.667,333.333,336.667,400,320C466.667,303.333,533.333,280,600,280C666.667,280,733.333,280,800,280L800,200C733.333,200,666.667,200,600,200C533.333,200,466.667,200,400,200C333.333,200,266.667,200,200,200C133.333,200,66.667,200,0,200Z"
                fill="#013027"
                stroke="none"
                opacity="1"
          >
          </path>
        </g>
      </g>
      <g style="transform: translate(0px, 50px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0C66.667,2.5,133.333,5,200,15C266.667,25,333.333,47.5,400,60C466.667,72.5,533.333,90,600,90C666.667,90,733.333,90,800,90L800,150C733.333,150,666.667,150,600,150C533.333,150,466.667,150,400,150C333.333,150,266.667,150,200,150C133.333,150,66.667,150,0,150Z"
                fill="#047662"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,300C66.667,297.5,133.333,295,200,285C266.667,275,333.333,252.5,400,240C466.667,227.5,533.333,210,600,210C666.667,210,733.333,210,800,210L800,150C733.333,150,666.667,150,600,150C533.333,150,466.667,150,400,150C333.333,150,266.667,150,200,150C133.333,150,66.667,150,0,150Z"
                fill="#047662"
                stroke="none"
                opacity="1"
          >
          </path>
        </g>
      </g>
      <g style="transform: translate(0px, 100px);">
        <g pointer-events="auto"
           aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
           role="graphics-document"
        >
          <path d="M0,0C66.667,1.667,133.333,3.333,200,10C266.667,16.667,333.333,31.667,400,40C466.667,48.333,533.333,60,600,60C666.667,60,733.333,60,800,60L800,100C733.333,100,666.667,100,600,100C533.333,100,466.667,100,400,100C333.333,100,266.667,100,200,100C133.333,100,66.667,100,0,100Z"
                fill="#06B899"
                stroke="none"
                opacity="1"
          >
          </path>
          <path d="M0,200C66.667,198.333,133.333,196.667,200,190C266.667,183.333,333.333,168.333,400,160C466.667,151.667,533.333,140,600,140C666.667,140,733.333,140,800,140L800,100C733.333,100,666.667,100,600,100C533.333,100,466.667,100,400,100C333.333,100,266.667,100,200,100C133.333,100,66.667,100,0,100Z"
                fill="#06B899"
                stroke="none"
                opacity="1"
          >
          </path>
        </g>
      </g>
      <g transform="translate(10, 210)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          1,000
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Visited Site
          </tspan>
        </text>
      </g>
      <line x1="200"
            y1="0"
            x2="200"
            y2="400"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(210, 210)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          900
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Added to Cart
          </tspan>
        </text>
      </g>
      <line x1="400"
            y1="0"
            x2="400"
            y2="400"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(410, 210)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          600
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Initiated Checkout
          </tspan>
        </text>
      </g>
      <line x1="600"
            y1="0"
            x2="600"
            y2="400"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(610, 210)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              y="-23"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="26"
        >
          400
        </text>
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Purchased
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`Charts/Funnel Chart NoValue smoke-test 1`] = `
<div class="_container_1u3dt_1"
     width="500"
     height="300"
     style="height: 300px; width: 500px;"
>
  <svg width="500"
       height="300"
       class="_svg_1u3dt_30"
       tabindex="0"
  >
    <g transform="translate(0, 0)">
      <g style="transform: translate(0px, 0px);">
        <g>
          <rect height="300"
                width="500"
                opacity="0"
                cursor="auto"
          >
          </rect>
          <g pointer-events="none"
             aria-label="Visited Site: 1,000, Added to Cart: 900, Initiated Checkout: 600, Purchased: 400"
             role="graphics-document"
          >
            <path d="M0,0C41.667,2.5,83.333,5,125,15C166.667,25,208.333,47.5,250,60C291.667,72.5,333.333,90,375,90C416.667,90,458.333,90,500,90L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                  fill="url(#gradient-funnel-series-ref-7-arc-0-top)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <path d="M0,300C41.667,297.5,83.333,295,125,285C166.667,275,208.333,252.5,250,240C291.667,227.5,333.333,210,375,210C416.667,210,458.333,210,500,210L500,150C458.333,150,416.667,150,375,150C333.333,150,291.667,150,250,150C208.333,150,166.667,150,125,150C83.333,150,41.667,150,0,150Z"
                  fill="url(#gradient-funnel-series-ref-7-arc-0-bottom)"
                  stroke="none"
                  opacity="1"
            >
            </path>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-7-arc-0-top"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
            <linearGradient spreadmethod="pad"
                            id="gradient-funnel-series-ref-7-arc-0-bottom"
                            y1="0%"
                            y2="0%"
                            x1="0%"
                            x2="100%"
            >
              <stop offset="0%"
                    stop-opacity="1"
                    stop-color="#2d60e8"
              >
              </stop>
              <stop offset="80%"
                    stop-opacity="0.5"
                    stop-color="#2d60e8"
              >
              </stop>
            </linearGradient>
          </g>
        </g>
      </g>
      <g transform="translate(10, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Visited Site
          </tspan>
        </text>
      </g>
      <line x1="125"
            y1="0"
            x2="125"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(135, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Added to Cart
          </tspan>
        </text>
      </g>
      <line x1="250"
            y1="0"
            x2="250"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(260, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Initiated Checkout
          </tspan>
        </text>
      </g>
      <line x1="375"
            y1="0"
            x2="375"
            y2="300"
            stroke="#333"
            stroke-width="2"
            pointer-events="none"
      >
      </line>
      <g transform="translate(385, 160)"
         opacity="1"
      >
        <text pointer-events="none"
              fill="#fff"
              dominant-baseline="middle"
              font-family="sans-serif"
              font-size="13"
        >
          <tspan dominant-baseline="alphabetic"
                 dy="2.5"
                 x="0"
                 style="baseline-shift: 0%;"
          >
            Purchased
          </tspan>
        </text>
      </g>
    </g>
  </svg>
</div>
`;
